# strava-project

./: .gitignore  NOTES.MD  StravaClientTokenService.py  TODO.MD  pyproject.toml  strava-main.py  tokens.json
analysis/notebooks/: 01_explore.ipynb
app/: __init__.py  database.py
app/models/: base.py  summary_activity.py
archive/: Repository.py  strava-api.py  token_refresh_py.py
clients/: strava_api_client.py
models/: base.py  summary_activity.py
repositories/: base_repository.py  summary_activity_repository.py
scripts/: database.py  get_summary_stats.py  reset_db.py
services/: ingestion_service.py  strava_token_service.py  summary_activity_service.py  summary_statistic_service.py
utils/: db.py
