[project]
name = "strava-project"
version = "0.1.0"
description = "app to collect and visualize running data"
authors = [
    {name = "Your Name",email = "roberttoribio04@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.46,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
